Switch to PHP 7.0.4

--- a/buildfiles/mac/build.default.properties
+++ b/buildfiles/mac/build.default.properties
@@ -61,11 +61,11 @@ runtime.compile.configuration = --prefix=${runtime.compile.prefix} \
                                 --with-libmemcached-dir=${libmemcached.dir} \
                                 --with-openssl \
                                 --with-openssl-dir=${libssl.dir} \
-                                --with-icu-dir=${runtime.compile.prefix} \
+                                --with-icu-dir=${libicu.dir} \
                                 --with-ldap \
                                 --with-xsl=shared \
-                                --with-mysql=shared \
                                 --with-mysqli=shared \
+                                --with-libxml-dir=${libxml2.dir} \
                                 --enable-fpm \
                                 --enable-intl=shared \
                                 --enable-bcmath=shared \
@@ -109,7 +109,7 @@ libevent.dylib.version = 4
 pcre.version = 8.33
 
 # ---- openssl Settings ------------------------------------------------
-openssl.version = 1.0.1s
+openssl.version = 1.0.2g
 
 # ---- icu4c Settings ---------------------------------------------------------
 libicu.version.major = 53
@@ -162,6 +162,12 @@ openssl.cc = darwin64-x86_64-cc
 libssl.dir = ${runtime.compile.prefix}
 
 # ---- icu4c Compile Settings ------------------------------------------------
+libicu.dir = ${runtime.compile.prefix}
 libicu.build = true
 libicu.cc = darwin64-x86_64-cc
 libicu.target-env = MacOSX
+
+# ---- libxml2 Settings ----------------------------------------------------------
+libxml2.dir = ${runtime.compile.prefix}
+libxml2.build = true
+libxml2.version = 2.9.3
