--- a/build.default.properties
+++ b/build.default.properties
@@ -9,7 +9,7 @@
 #--------------------------------------------------------------------------------
 
 # ---- Module Release Settings --------------------------------------------------
-release.version = 1.1.3
+release.version = 2.0.0-alpha1
 
 # ---- Default Operating System -------------------------------------------------
 os.family = linux
@@ -27,21 +27,21 @@ env.GIT_BRANCH = origin/tags/${release.version}
 build.number = ${env.BUILD_NUMBER}
 
 # ---- ApplicationServer Compile Settings ---------------------------------------
-runtime.php.major-version = 5.6
-runtime.php.version = ${runtime.php.major-version}.19
+runtime.php.major-version = 7.0
+runtime.php.version = ${runtime.php.major-version}.4
 runtime.php.run-tests = false
 runtime.ext-appserver.version = 1.0.1
-runtime.pthreads.version = 2.0.10
-runtime.apcu.version = 4.0.7
+runtime.pthreads.version = 3.1.6
+runtime.apcu.version = 5.1.3
 runtime.operator.version = 0.4.1
 runtime.AOP.version = 0.2.2b1
 runtime.pecl_http.version = 2.0.4
 runtime.libevent.version = 0.1.0
-runtime.event.version = 1.10.2
+runtime.event.version = 2.0.1
 runtime.libev.version = 2d8a36ccc29178eee5b483e56ef4a994c95b604f
 runtime.ev.version = 0.2.10
-runtime.xdebug.version = 2.2.7
-runtime.redis.version = 2.2.4
+runtime.xdebug.version = 2.4.0
+runtime.redis.version = 2.2.7
 
 # ---- Default download URLs ----------------------------------------------------
 composer.download.url = http://getcomposer.org/installer
